--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.eqasim</groupId>
 	<artifactId>uam</artifactId>
@@ -8,7 +8,7 @@
 	<properties>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-		<matsim.version>12.0</matsim.version>
+		<matsim.version>13.0</matsim.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -16,9 +16,16 @@
 			<url>https://packagecloud.io/eth-ivt/uam/maven2</url>
 		</repository>
 		<repository>
-    			<id>eqasim</id>
-    			<url>https://packagecloud.io/eth-ivt/eqasim/maven2</url>
+			<id>eqasim</id>
+			<url>https://packagecloud.io/eth-ivt/eqasim/maven2</url>
 		</repository>
+		<repository>
+			<id>jmetal-repo</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots/</url>
+		</repository>
+
+		<!-- Hao's addings -->
+		<!-- Hao's addings -->
 	</repositories>
 
 	<dependencies>
@@ -26,7 +33,7 @@
 		<dependency>
 			<groupId>org.eqasim</groupId>
 			<artifactId>core</artifactId>
-			<version>1.2.1</version>
+			<version>1.3.1</version>
 		</dependency>
 
 		<dependency>
@@ -38,8 +45,37 @@
 		<dependency>
 			<groupId>net.bhl.matsim</groupId>
 			<artifactId>matsim-uam</artifactId>
-			<version>3.0.0</version>
+			<version>4.0.1</version>
 		</dependency>
+
+		<!-- Hao's addings -->
+		<dependency>
+			<groupId>com.github.haifengl</groupId>
+			<artifactId>smile-core</artifactId>
+			<version>2.6.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.ortools</groupId>
+			<artifactId>ortools-java</artifactId>
+			<version>9.10.4067</version>
+		</dependency>
+		<dependency>
+			<groupId>org.uma.jmetal</groupId>
+			<artifactId>jmetal-core</artifactId>
+			<version>5.10</version>
+		</dependency>
+		<dependency>
+			<groupId>org.uma.jmetal</groupId>
+			<artifactId>jmetal-algorithm</artifactId>
+			<version>5.10</version>
+		</dependency>
+		<dependency>
+			<groupId>nz.ac.waikato.cms.weka</groupId>
+			<artifactId>weka-stable</artifactId>
+			<version>3.8.1</version>
+		</dependency>
+		<!-- Hao's addings -->
+
 	</dependencies>
 
 	<profiles>
